[package]
name = "df_social_schedule"
version = "0.1.0"
authors = ["Alex Williams <mkb2191@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schedule_solver = {path = "./schedule_solver"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[workspace]
members = ["schedule_solver"]


[profile.release]
debug = true
debug-assertions = false
lto = true